--- a/proj1/index.html
+++ b/proj1/index.html
@@ -10,7 +10,7 @@
           <h2>Special Optimizations</h2>
           <p></p>
           
-          <image src="./Task1-img4">
+          <image src="./Task1-img4" width="150" height="150" alt="Task 1 Test 4 image">
           
           <h2>Task 2: </h2>
           <p> </p>
