Added cool running robot

--- a/proj1/index.html
+++ b/proj1/index.html
@@ -19,7 +19,13 @@
           <p style="text-align:center;"> </p>
           
           <h2>Task 3: </h2>
-          <p style="text-align:center;"> </p>
+          <p style="text-align:center;">
+          I did not encounter any problems other than figuring out which syntax to use for these functions.
+          <br>
+          <br>
+          Cubeman is now a cool robot with a flashy hairstyle. He is running away from all adoring fans.
+          <img src="my_robot.png" width="450" height="650" alt="Robot running">
+          </p>
           
           <h2>Task 4: </h2>
           <p style="text-align:center;">Barycentric coordinates are useful for interpolation across triangles. Interpolation is useful for specifying values, in our case color, at vertices and obtaining varying values across the surface. In this image, we have a single triangle with three vertices: one blue, green, and red. These vertices ultimately produce a smoothly blended color triangle.
