--- a/proj1/index.html
+++ b/proj1/index.html
@@ -4,6 +4,12 @@
     
     <!--An overview of the project, your approach to and implementation for each of the parts, and what problems you encountered and how you solved them. Strive for clarity and succinctness.-->
 	<body>
+        <h2 style="text-align:center;">overview </h2>
+        <p style="text-align:center;">
+            In this project, we implemented a simple rasterizer, 
+            including features like drawing triangles, supersampling, hierarchical transforms, 
+            and texture mapping with antialiasing. We learned all about the magic of linear interpolation and its ability to preserve details when rasterizing images!
+            </p>
           <h2 style="text-align:center;">Task 1: </h2>
           <p style="text-align:center;">We were able to rasterize triangles by calculating the differences between all of the adjacent points on each triangle and performing the three line test to check whether or not a pixel in the image was indeed inside a triangle. 
             If it was inside the triangle, or even on the edge, then we filled in the pixel with the fill_pixel function.
